// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenuButton Matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:hover,
.c2[data-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c2:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12:focus {
  outline: none;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c12:focus:not(:focus-visible) {
  box-shadow: none;
}

.c12:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #84C6EA;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:focus {
  outline: none;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c17:focus:not(:focus-visible) {
  box-shadow: none;
}

.c17:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c16 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c13 {
  color: #006296;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c13:hover {
  color: #003A5A;
}

.c13:visited {
  color: #62a;
}

.c13:visited svg {
  color: #62a;
}

.c18 {
  color: #84C6EA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c18:visited {
  color: #62a;
}

.c18:visited svg {
  color: #62a;
}

.c15 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c14 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c14:focus {
  outline: none;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c14:hover {
  background-color: #DBDEE1;
}

.c14[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c7:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c10 {
  line-height: 1.25rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c8[disabled],
.c8[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c11:focus {
  outline: none;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c11:hover {
  background-color: transparent;
}

.c11[disabled],
.c11[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c4 {
  margin-left: var(--spacing-1x);
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<nav
  aria-label="Menu"
  class="c0"
>
  <button
    aria-expanded="true"
    class="c1 c2 c3"
    data-expanded="true"
    data-testid="menu-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c4"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c5 c6"
    data-testid="menu-list"
  >
    <ul
      aria-labelledby="firstGroup"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionA"
          href="/testA"
          tabindex="0"
        >
          <span
            class="c9"
          >
            <span
              class="c10"
            >
              optionA
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionB"
          href="/testB"
          tabindex="0"
        >
          <span
            class="c9"
          >
            <span
              class="c10"
            >
              optionB
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionC"
          href="/testC"
          tabindex="0"
        >
          <span
            class="c9"
          >
            <span
              class="c10"
            >
              optionC
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c11"
          data-testid="listitem-optionD"
          disabled=""
          href="/testD"
          tabindex="-1"
        >
          <span
            class="c9"
          >
            <span
              class="c10"
            >
              optionD
            </span>
          </span>
        </a>
      </li>
    </ul>
    <ul
      aria-labelledby="secondGroup"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c12 c13 c14"
          href="https://external-link.com/a"
          target="_blank"
          type="external"
        >
          <span
            class="c15"
          >
            ExternalA
          </span>
          <svg
            aria-label="open in new window"
            class="c16"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c12 c13 c14"
          href="https://external-link.com/b"
          target="_blank"
          type="external"
        >
          <span
            class="c15"
          >
            ExternalB
          </span>
          <svg
            aria-label="open in new window"
            class="c16"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c12 c13 c14"
          href="https://external-link.com/c"
          target="_blank"
          type="external"
        >
          <span
            class="c15"
          >
            ExternalC
          </span>
          <svg
            aria-label="open in new window"
            class="c16"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c17 c18 c14"
          disabled=""
          target="_blank"
          type="external"
        >
          <span
            class="c15"
          >
            ExternalD
          </span>
          <svg
            aria-label="open in new window"
            class="c16"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`DropdownMenuButton Matches Snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c2:hover,
.c2[data-expanded="true"] {
  background-color: #003A5A;
  color: #FFFFFF;
}

.c2:disabled {
  background-color: transparent;
  color: #003A5A;
}

.c2:focus {
  background-color: #012639;
  border-color: #006296;
  color: #FFFFFF;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #006296;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12:focus {
  outline: none;
}

.c12:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c12:focus:not(:focus-visible) {
  box-shadow: none;
}

.c12:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #84C6EA;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c17:focus {
  outline: none;
}

.c17:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c17:focus:not(:focus-visible) {
  box-shadow: none;
}

.c17:focus-visible {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c16 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: var(--spacing-half);
  margin-right: 0;
}

.c13 {
  color: #006296;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c13:hover {
  color: #003A5A;
}

.c13:visited {
  color: #62a;
}

.c13:visited svg {
  color: #62a;
}

.c18 {
  color: #84C6EA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
}

.c18:visited {
  color: #62a;
}

.c18:visited svg {
  color: #62a;
}

.c15 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c14 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: 2rem;
  overflow: hidden;
  padding: 0 var(--spacing-2x) 0 var(--spacing-3x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c14:focus {
  outline: none;
}

.c14:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c14:hover {
  background-color: #DBDEE1;
}

.c14[disabled] {
  color: #B7BBC2;
  fill: #B7BBC2;
  pointer-events: none;
}

.c7 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c7:not(:last-child)::after {
  border-bottom: 1px solid #DBDEE1;
  content: "";
  display: block;
  margin: 0 var(--spacing-2x);
}

.c10 {
  line-height: 1.25rem;
  margin: auto 0;
  margin-right: var(--spacing-1x);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-size: 0.875rem;
  height: 100%;
  margin: 0;
  overflow: hidden;
  padding: 0;
  padding-left: var(--spacing-half);
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c8:hover {
  background-color: #DBDEE1;
}

.c8[disabled],
.c8[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  height: 2rem;
  line-height: 2rem;
  padding: 0 var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
}

.c11:focus {
  outline: none;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: inset 0 0 0 2px #84C6EA,inset 0 0 0 3px #006296;
}

.c11:hover {
  background-color: transparent;
}

.c11[disabled],
.c11[disabled] * {
  color: #B7BBC2;
  cursor: default;
  fill: #B7BBC2;
  pointer-events: none;
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  color: #000000;
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c0 {
  position: relative;
}

.c3 {
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c4 {
  margin-left: var(--spacing-1x);
}

.c6 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<nav
  aria-label="Menu"
  class="c0"
>
  <button
    aria-expanded="false"
    class="c1 c2 c3"
    data-expanded="false"
    data-testid="menu-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="c4"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c5 c6"
    data-testid="menu-list"
    hidden=""
  >
    <ul
      aria-labelledby="firstGroup"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionA"
          href="/testA"
          tabindex="0"
        >
          <span
            class="c9"
          >
            <span
              class="c10"
            >
              optionA
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionB"
          href="/testB"
          tabindex="0"
        >
          <span
            class="c9"
          >
            <span
              class="c10"
            >
              optionB
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c8"
          data-testid="listitem-optionC"
          href="/testC"
          tabindex="0"
        >
          <span
            class="c9"
          >
            <span
              class="c10"
            >
              optionC
            </span>
          </span>
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c11"
          data-testid="listitem-optionD"
          disabled=""
          href="/testD"
          tabindex="-1"
        >
          <span
            class="c9"
          >
            <span
              class="c10"
            >
              optionD
            </span>
          </span>
        </a>
      </li>
    </ul>
    <ul
      aria-labelledby="secondGroup"
      class="c7"
    >
      <li>
        <a
          aria-disabled="false"
          class="c12 c13 c14"
          href="https://external-link.com/a"
          target="_blank"
          type="external"
        >
          <span
            class="c15"
          >
            ExternalA
          </span>
          <svg
            aria-label="open in new window"
            class="c16"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c12 c13 c14"
          href="https://external-link.com/b"
          target="_blank"
          type="external"
        >
          <span
            class="c15"
          >
            ExternalB
          </span>
          <svg
            aria-label="open in new window"
            class="c16"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="false"
          class="c12 c13 c14"
          href="https://external-link.com/c"
          target="_blank"
          type="external"
        >
          <span
            class="c15"
          >
            ExternalC
          </span>
          <svg
            aria-label="open in new window"
            class="c16"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
      <li>
        <a
          aria-disabled="true"
          class="c17 c18 c14"
          disabled=""
          target="_blank"
          type="external"
        >
          <span
            class="c15"
          >
            ExternalD
          </span>
          <svg
            aria-label="open in new window"
            class="c16"
            color="currentColor"
            focusable="false"
            height="16"
            role="img"
            width="16"
          />
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
